--- a/HangerApplication/app/src/main/res/values/strings.xml
+++ b/HangerApplication/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
+
+    <string name="hello">Hello World, PhotoIntentActivity!</string>
+    <string name="app_name2">PhotoByIntent</string>
+    <string name="btnIntend">Take (big) Picture</string>
+    <string name="btnIntendS">Take (small) Picture</string>
+    <string name="btnIntendV">Take Video</string>
+    <string name="cannot">Cannot</string>
+    <string name="album_name">CameraSample</string>
+
     <string name="app_name">Hanger Application</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
